Added dynamic route for extra features such as coffeeType and ovenMode.
